--- a/sites/kit.svelte.dev/src/lib/docs/client/docs.css
+++ b/sites/kit.svelte.dev/src/lib/docs/client/docs.css
@@ -205,13 +205,21 @@
 	background: rgba(255, 62, 0, 0.1) !important;
 }
 
+.content ul ul {
+	margin-bottom: 0;
+}
+
+.content ul > li {
+	margin: 0.5em 0;
+}
+
 /** hacky overrides to allow filenames inside code blocks —
     TODO change the CSS in site-kit so we can get rid of this */
 .code-block {
 	background-color: var(--code-bg);
 	color: var(--code-base);
 	border-radius: 0.5rem;
-	margin: 0 0 1rem 0;
+	margin: 0 0 2rem 0;
 	font-size: 14px;
 	max-width: var(--linemax);
 	box-shadow: inset 1px 1px 6px hsla(205.7, 63.6%, 30.8%, 0.06);
