--- a/sites/kit.svelte.dev/src/lib/docs/client/docs.css
+++ b/sites/kit.svelte.dev/src/lib/docs/client/docs.css
@@ -210,7 +210,7 @@
 }
 
 .content ul > li {
-	margin: 0.5em 0;
+	margin: 0.5em 0 !important;
 }
 
 /** hacky overrides to allow filenames inside code blocks —
